[metadata]
name = pyctb
author = Henry Bigelow
author_email = hrbigelow@gmail.com
license = MIT
description = Python Customized Tracebacks
url = https://github.com/hrbigelow/pyctb
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = pyctb
include_package_data = True
install_requires = 
    stack_data>=0.6.1

setup_requires = setuptools>=44; setuptools_scm[toml]>=3.4.3

